2005-05-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/SelectChild.py (on_save_child_clicked) Commit new parent family
	of child properly; correct handle/object mismatch; exec parent callback
 	to do a proper redraw (closes #1201151)

	* src/dates/Date_de.py: Register for all variants of german; Add other
	variants of month names for parser

2005-05-12  Don Allingham  <don@gramps-project.org>
	* src/GrampsBSDDB.py: force database sync on transaction commit

2005-05-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (ParamFilter.apply): Set parameter list before
	prepare (solves crash in full text search)
	* src/gramps_main.py: Enable full text search filters again
	
2005-05-12  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Check.py (cleanup_missing_photos): Typo.
	* configure.in: Bump up the version number.
	* NEWS: Update.
	* src/ReportUtils.py (insert_images): Pass sizes to add_media_object;
	(married_str): Quit if no spouse.

	* src/data/gramps.xml: Include different cases for file extensions.

	* src/po/ru.po: Typo.

2005-05-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Added generation of multiple date
	formats including invalid dates. This is displaying and reparsing every
	date to compare the result.
	* src/plugins/NavWebPage.py (HomePage): Dont crash on note only object 
	* src/dates/Date_de.py: Updated translation
	
2005-05-11  Don Allingham  <don@gramps-project.org>
	* src/ReadGedcom.py: coerce the name into a unicode value - if the wrong character
	encoding is indicated in the file, the screen display can get corrupted due to keys
	that aren't unicode values
	* src/dates/Date_de.py: first pass at a German date handler

2005-05-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DateHandler.py: Fallback to "C" locale instead of the ISO
	format. This currently basically falls back to en, but this could
	be enhanced by a translated fallback parser later.
